--- a/social-media-dashboard-with-theme-switcher-master/index.html
+++ b/social-media-dashboard-with-theme-switcher-master/index.html
@@ -1,13 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="assets/favicon-32x32.png">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@500;600;700&display=swap" rel="stylesheet">
-    <title>Document</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"
+        integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog=="
+        crossorigin="anonymous" />
+    <title>Social Media - Theme Switcher</title>
 </head>
+
 <body>
     <div class="app-ctr">
         <div class="app-header">
@@ -23,10 +28,162 @@
                 </label>
             </div>
         </div>
+        <div class="dashboard-ctr">
+            <div class="dashboard-card">
+                <div class="card-border-top"></div>
+                <div class="account-name">@omprakash</div>
+                <div class="followers-count">1987</div>
+                <div class="followers">Followers</div>
+                <div class="count-change up">
+                    <i class="fas fa-caret-up"></i>
+                    12 Today
+                </div>
+            </div>
+            <div class="dashboard-card">
+                <div class="card-border-top"></div>
+                <div class="account-name">@omprakash</div>
+                <div class="followers-count">1044</div>
+                <div class="followers">Followers</div>
+                <div class="count-change up">
+                    <i class="fas fa-caret-up"></i>
+                    99 Today
+                </div>
+            </div>
+            <div class="dashboard-card">
+                <div class="card-border-top"></div>
+                <div class="account-name">@omprakash</div>
+                <div class="followers-count">11K</div>
+                <div class="followers">Followers</div>
+                <div class="count-change up">
+                    <i class="fas fa-caret-up"></i>
+                    578 Today
+                </div>
+            </div>
+            <div class="dashboard-card">
+                <div class="card-border-top"></div>
+                <div class="account-name">3D Noob</div>
+                <div class="followers-count">8239</div>
+                <div class="followers">Subscribers</div>
+                <div class="count-change down">
+                    <i class="fas fa-caret-down"></i>
+                    144 Today
+                </div>
+            </div>
+        </div>
+        <div class="overview-header">
+            Overview - Today
+        </div>
+        <div class="overview-card-ctr">
+            <div class="overview-card">
+                <div class="context-row">
+                    <div class="context">Page Views</div>
+                    <div class="app-logo fb-img"></div>
+                </div>
+                <div class="count-row">
+                    <div class="count">87</div>
+                    <div class="change up">
+                        <i class="fas fa-caret-up"></i>
+                        3%
+                    </div>
+                </div>
+            </div>
+            <div class="overview-card">
+                <div class="context-row">
+                    <div class="context">Likes</div>
+                    <div class="app-logo fb-img"></div>
+                </div>
+                <div class="count-row">
+                    <div class="count">52</div>
+                    <div class="change down">
+                        <i class="fas fa-caret-down"></i>
+                        2%
+                    </div>
+                </div>
+            </div>
+            <div class="overview-card">
+                <div class="context-row">
+                    <div class="context">Likes</div>
+                    <div class="app-logo insta-img"></div>
+                </div>
+                <div class="count-row">
+                    <div class="count">5462</div>
+                    <div class="change up">
+                        <i class="fas fa-caret-up"></i>
+                        2257%
+                    </div>
+                </div>
+            </div>
+            <div class="overview-card">
+                <div class="context-row">
+                    <div class="context">Profile Views</div>
+                    <div class="app-logo insta-img"></div>
+                </div>
+                <div class="count-row">
+                    <div class="count">52k</div>
+                    <div class="change up">
+                        <i class="fas fa-caret-up"></i>
+                        1375%
+                    </div>
+                </div>
+            </div>
+            <div class="overview-card">
+                <div class="context-row">
+                    <div class="context">Retweets</div>
+                    <div class="app-logo twitter-img"></div>
+                </div>
+                <div class="count-row">
+                    <div class="count">117</div>
+                    <div class="change up">
+                        <i class="fas fa-caret-up"></i>
+                        303%
+                    </div>
+                </div>
+            </div>
+            <div class="overview-card">
+                <div class="context-row">
+                    <div class="context">Likes</div>
+                    <div class="app-logo twitter-img"></div>
+                </div>
+                <div class="count-row">
+                    <div class="count">507</div>
+                    <div class="change up">
+                        <i class="fas fa-caret-up"></i>
+                        553%
+                    </div>
+                </div>
+            </div>
+            <div class="overview-card">
+                <div class="context-row">
+                    <div class="context">Likes</div>
+                    <div class="app-logo youtube-img"></div>
+                </div>
+                <div class="count-row">
+                    <div class="count">107</div>
+                    <div class="change down">
+                        <i class="fas fa-caret-down"></i>
+                        19%
+                    </div>
+                </div>
+            </div>
+            <div class="overview-card">
+                <div class="context-row">
+                    <div class="context">Total Views</div>
+                    <div class="app-logo youtube-img"></div>
+                </div>
+                <div class="count-row">
+                    <div class="count">1407</div>
+                    <div class="change down">
+                        <i class="fas fa-caret-down"></i>
+                        12%
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
-    
+
 
 
     <script src="app.js"></script>
 </body>
+
 </html>
