Commit for responsive design

--- a/social-media-dashboard-with-theme-switcher-master/index.html
+++ b/social-media-dashboard-with-theme-switcher-master/index.html
@@ -21,7 +21,7 @@
                 <div class="count">Total followers: 23,004</div>
             </div>
             <div class="toggle-ctr">
-                Dark Mode
+                <div>Dark Mode</div>
                 <label class="switch">
                     <input type="checkbox" id="theme-switch" onclick="switchTheme()">
                     <span class="slider"></span>
