--- a/url-shortening-api/index.html
+++ b/url-shortening-api/index.html
@@ -5,9 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>URL Shortener</title>
     <link rel="icon" href="assets/favicon-32x32.png">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    
+    <header>
+        <div class="header-left">
+            <div class="logo"></div>
+            <div class="option">Features</div>
+            <div class="option">Pricing</div>
+            <div class="option">Resources</div>
+        </div>
+        <div class="header-right">
+            <div class="option">Login</div>
+            <div class="signup-btn">Sign Up</div>
+        </div>
+    </header>
 </body>
 </html>
