--- a/url-shortening-api/index.html
+++ b/url-shortening-api/index.html
@@ -21,5 +21,21 @@
             <div class="signup-btn">Sign Up</div>
         </div>
     </header>
+    <section>
+        <div class="page-desc">
+            <div class="text-ctr">
+                <div class="text-header">
+                    More than just shorter links
+                </div>
+                <div class="text-desc">
+                    Build your brand's recognition and get detailed insights on how your links are performing.
+                </div>
+                <div class="get-started-btn">
+                    Get Started
+                </div>
+            </div>
+            <img class="working-img" src="./assets/illustration-working.svg"/>
+        </div>
+    </section>
 </body>
 </html>
